--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,9 @@
 	<title>hello coursera</title>
 </head>
 <body>
-<h1>hello coursera Its a great course</h1>
+<h1 align="center">hello </h1>
+<p>
+	
+</p>
 </body>
 </html>
