--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>assignment solution for module 2</title>
+	<link rel="stylesheet" href="mod2.css">
 </head>
 <body>
-	<h1 align=center>OUR MENU</h1>
+	<h1 align=center>Our Menu</h1>
+	<div class="container">
+		
+			<div class='col1'><div class="col4"><h2>Chicken</h2></div>
+				It is the most common type of the poultry in the world.Owing to the relative ease and low cost of raising them in comparison to the animals such as cattle or hogs.
+			</div>
+			<div class="col2"><div class="col5"><h2>Beef</h2></div>
+				Beef is the culinary name for meat from cattle,particular skeletal muscle.Humans have been eating beef since prehistoric times.Beef is a source of high-quality protein and nutrients.
+			</div>
+			<div class="col3"><div class="col6"><h2>Sushi</h2></div>
+				Sushi is a japanese dish of prepared vinegared rice,usually with some sugar and salt,aacompanying a variety of ingredients,such as seafood,often raw vegetables.
+			</div>
+		
+	</div>
+
 </body>
 </html>
