--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	
 	<title>assignment solution for module 2</title>
 	<link rel="stylesheet" href="mod2.css">
 </head>
 <body>
-	<h1 align=center>Our Menu</h1>
-	<div class="container">
-		
+	<h1>Our Menu</h1>
+	
+	<div class="container">	
 			<div class='col1'><div class="col4"><h2>Chicken</h2></div>
 				It is the most common type of the poultry in the world.Owing to the relative ease and low cost of raising them in comparison to the animals such as cattle or hogs.
 			</div>
@@ -18,8 +18,7 @@
 			<div class="col3"><div class="col6"><h2>Sushi</h2></div>
 				Sushi is a japanese dish of prepared vinegared rice,usually with some sugar and salt,aacompanying a variety of ingredients,such as seafood,often raw vegetables.
 			</div>
-		
 	</div>
-
+	
 </body>
 </html>
