--- a/site/ex.html
+++ b/site/ex.html
@@ -1,41 +1,8 @@
-@media screen and (max-width: 520px)
-{
-.container{
-	float:left;
-	width:33.33%;
-	padding:10px;
-	width:100%;
-	overflow: auto;
-}
+<link href="https://fonts.googleapis.com/css?family=Exo+2:400,500,600,700" rel="stylesheet">
 
-}
-.container:after{
-	content:"";
-	display:table;
-	clear: both;
-}
-
-	background-size: cover;
-	
-	
-}
-float:right;	
-	align-content: space-between;
-
-.container{
-	
-	padding:10px;
-	margin:10px;
-}
-.col3{
-	grid-column: 1/span 2;
-}
-}
-.container > div {
-
-	;
-}
-
-
-
-	
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-collapsable-nav" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
