--- a/new-web/index.html
+++ b/new-web/index.html
@@ -12,10 +12,27 @@
 <body>
 	<header>
 		<nav id="header-nav" class="navbar navbar-default">
-			<div class="container">
-				<nav class="nav-brand">
-					PRIYA RES
-			</div>
+		  <div class="container">
+			<div class="navbar-header">
+			  <a href="index.html" class="pull-left">
+				<div id="logo-img" alt="Logo img"></div>
+			  </a>
+				
+			<div class="navbar-brand">
+			  <a href="index.html"><h1>Priya's Restaurant</h1></a>
+			   <p>
+				 <span>kosher certified</span>
+				</p>			
+				</div>
+
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target='#menu-collapsable-nav' aria-expanded='false'>
+				<span class="sr-only">toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+		</div>
+	</div>
 	</header>
 
 
