--- a/site/ex.html
+++ b/site/ex.html
@@ -6,3 +6,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+
+
+<nav class="nav-brand">
+					PRIYA 
